Handle parameter validation errors gracefully